...
                    }
                }
                .analyticsScreen(name: .dashboard)
            }
            .ignoresSafeArea(.keyboard, edges: .bottom)
            .configureNavBar()
            .configureNavigation(title: "", menuImage: showMenu ? "closeLight" : "menu", showMenu: $showMenu)
        }
        .navigationViewStyle(StackNavigationViewStyle())
    }
    
    private func handleMenuRowTap(rowType: MenuRowType) {
        switch rowType {
...
